fixed div jumping on motion bug by setting a height for .displayStatTable.

--- a/src/components/modal/dashModals/topTenModal/TopTen.css
+++ b/src/components/modal/dashModals/topTenModal/TopTen.css
@@ -188,7 +188,7 @@
 
 .displayStatTable {
   width: 100%;
-  height: 100%;
+  height: 20vh;
 }
 
 .changeTableButtonContainer {
@@ -220,6 +220,7 @@
 
 .tableContainer {
   width: 90%;
+  /* height: 20vh; */
   margin: 5px auto;
   display: flex;
   flex-wrap: wrap;
@@ -233,7 +234,7 @@
   font-size: .90em;
   align-items: center;
   border-bottom: 1px solid rgba(50,50,50,0.5);
-  padding: 3px 0px;
+  padding: 5px 0px;
 }
 
 .tableStatNumBox > h5 {
